// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 number of expenses in ExpenseSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.69
  </h1>
</div>
`;

exports[`should render multiple expenses in ExpenseSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,645.29
  </h1>
</div>
`;
